RESOLVED FIXED265764
[UIAsyncTextInput] Keyboard sometimes autocapitalizes incorrectly while typing an inline completion
https://bugs.webkit.org/show_bug.cgi?id=265764
Summary [UIAsyncTextInput] Keyboard sometimes autocapitalizes incorrectly while typin...
Wenson Hsieh
Reported 2023-12-03 13:31:43 PST
Attachments
Wenson Hsieh
Comment 1 2023-12-03 14:59:59 PST
EWS
Comment 2 2023-12-04 08:44:35 PST
Committed 271482@main (01a600b1bfc9): <https://commits.webkit.org/271482@main> Reviewed commits have been landed. Closing PR #21244 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.